# gofile-dl

./: .gitignore  Cargo.toml  README.md  package-lock.json  package.json
fixtures/: scrape_fixture.mjs
scripts/: package-lock.json  package.json  scrape_gofile.mjs
src/: gofile-dl.mjs  main.rs
test/: gofile-dl.test.mjs
