[package]
name = "gofile-dl"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
clap = { version = "4.5.41", features = ["derive", "env"] }
futures-util = "0.3.31"
indicatif = "0.18.0"
reqwest = { version = "0.12.22", features = ["json", "stream", "rustls-tls", "socks"], default-features = false }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"

tokio = { version = "1.46.1", features = ["fs", "macros", "process", "rt-multi-thread", "signal"] }
url = "2.5.4"
